more refactoring for newer java features